aptos-move/flow/src/tests/edit_hook/spec_deref_borrow.exp
error[E04003]: built-in operation not supported
  ┌─ spec_deref_borrow.move:7:27
  │
7 │         ensures result == (*r).value;
  │                           ^^^^ dereference `*e` is not allowed in spec expressions

error[E04003]: built-in operation not supported
  ┌─ spec_deref_borrow.move:8:27
  │
8 │         ensures result == (&r).value;
  │                           ^^^^ borrow `&e` is not allowed in spec expressions
